# luckfox_lvgl

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c
lib/include/: lcd.h  lcd_init.h  lib_gpio.h  lib_spi.h  lib_uart.h
lib/src/: lcd.c  lcd_init.c  lib_gpio.c  lib_spi.c  lib_uart.c
lvgl/: lv_conf.h  lv_port_disp.c  lv_port_disp.h
